xidlc/tests/snapshots/codegen_snapshot__openapi__http_scope_matrix.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_scope_matrix.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "MatrixBody": {
        "properties": {
          "alias": {
            "type": "string"
          },
          "name": {
            "type": "string"
          },
          "tags": {
            "items": {
              "type": "string"
            },
            "type": "array"
          }
        },
        "required": [
          "name",
          "tags"
        ],
        "type": "object"
      }
    },
    "securitySchemes": {
      "api_key-cookie-session_key": {
        "in": "cookie",
        "name": "session_key",
        "type": "apiKey"
      },
      "api_key-header-x-alt-key": {
        "in": "header",
        "name": "X-Alt-Key",
        "type": "apiKey"
      },
      "api_key-query-org_key": {
        "in": "query",
        "name": "org_key",
        "type": "apiKey"
      },
      "http_basic": {
        "scheme": "basic",
        "type": "http"
      },
      "http_bearer": {
        "scheme": "bearer",
        "type": "http"
      },
      "oauth2": {
        "flows": {
          "clientCredentials": {
            "scopes": {
              "reports:read": "reports:read",
              "reports:write": "reports:write"
            },
            "tokenUrl": "https://example.invalid/token"
          }
        },
        "type": "oauth2"
      }
    }
  },
  "info": {
    "title": "xidlc",
    "version": "v1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/attribute/bare_attr": {
      "get": {
        "deprecated": true,
        "description": "Deprecated.",
        "operationId": "HttpScopeMatrixService.get_attribute_bare_attr",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        }
      }
    },
    "/attribute/inherited_attr": {
      "get": {
        "deprecated": true,
        "description": "Deprecated. Since 2026-01-15T00:00:00Z.",
        "operationId": "HttpScopeMatrixService.get_attribute_inherited_attr",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        }
      }
    },
    "/v2/scope/default": {
      "post": {
        "deprecated": true,
        "description": "Deprecated. Since 2026-01-15T00:00:00Z.",
        "operationId": "HttpScopeMatrixService.default_scope",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/MatrixBody"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        }
      }
    },
    "/v2/scope/deprecated/plain/{id}": {
      "get": {
        "deprecated": true,
        "description": "Deprecated.",
        "operationId": "HttpScopeMatrixService.deprecated_plain",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        }
      }
    },
    "/v2/scope/deprecated/since/{id}": {
      "get": {
        "deprecated": true,
        "description": "Deprecated. Since 2026-02-01T00:00:00Z.",
        "operationId": "HttpScopeMatrixService.deprecated_since_only",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        }
      }
    },
    "/v2/scope/deprecated/window/{id}": {
      "get": {
        "deprecated": true,
        "description": "Deprecated. Since 2026-03-01T00:00:00Z. After 2026-12-31T23:59:59Z.",
        "operationId": "HttpScopeMatrixService.deprecated_window",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        }
      }
    },
    "/v2/scope/override-both": {
      "post": {
        "deprecated": true,
        "description": "Deprecated. Since 2026-01-15T00:00:00Z.",
        "operationId": "HttpScopeMatrixService.override_both_media",
        "requestBody": {
          "content": {
            "application/x-www-form-urlencoded": {
              "schema": {
                "properties": {
                  "age": {
                    "format": "int32",
                    "minimum": 0,
                    "type": "integer"
                  },
                  "name": {
                    "type": "string"
                  }
                },
                "required": [
                  "name"
                ],
                "type": "object"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "application/msgpack": {
                "schema": {
                  "properties": {
                    "normalized_name": {
                      "type": "string"
                    },
                    "return": {
                      "$ref": "#/components/schemas/MatrixBody"
                    }
                  },
                  "required": [
                    "return",
                    "normalized_name"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        }
      }
    },
    "/v2/scope/override-consumes": {
      "post": {
        "deprecated": true,
        "description": "Deprecated. Since 2026-01-15T00:00:00Z.",
        "operationId": "HttpScopeMatrixService.override_consumes_only",
        "requestBody": {
          "content": {
            "application/x-www-form-urlencoded": {
              "schema": {
                "properties": {
                  "age": {
                    "format": "int32",
                    "minimum": 0,
                    "type": "integer"
                  },
                  "name": {
                    "type": "string"
                  }
                },
                "required": [
                  "name"
                ],
                "type": "object"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "properties": {
                    "normalized_name": {
                      "type": "string"
                    },
                    "return": {
                      "type": "string"
                    }
                  },
                  "required": [
                    "return",
                    "normalized_name"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        }
      }
    },
    "/v2/scope/override-produces/{id}": {
      "get": {
        "deprecated": true,
        "description": "Deprecated. Since 2026-01-15T00:00:00Z.",
        "operationId": "HttpScopeMatrixService.override_produces_only",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/msgpack": {
                "schema": {
                  "properties": {
                    "return": {
                      "$ref": "#/components/schemas/MatrixBody"
                    },
                    "revision": {
                      "format": "int32",
                      "minimum": 0,
                      "type": "integer"
                    }
                  },
                  "required": [
                    "return",
                    "revision"
                  ],
                  "type": "object"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        }
      }
    },
    "/v2/security/alternatives/{id}": {
      "get": {
        "operationId": "HttpSecurityMatrixService.alternative_security",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          },
          {
            "in": "query",
            "name": "locale",
            "required": false,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        },
        "security": [
          {
            "http_bearer": []
          },
          {
            "api_key-header-x-alt-key": []
          }
        ]
      }
    },
    "/v2/security/bearer-cookie": {
      "post": {
        "operationId": "HttpSecurityMatrixService.bearer_or_cookie_security",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "action": {
                    "type": "string"
                  },
                  "note": {
                    "type": "string"
                  }
                },
                "required": [
                  "action"
                ],
                "type": "object"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        },
        "security": [
          {
            "http_bearer": []
          },
          {
            "api_key-cookie-session_key": []
          }
        ]
      }
    },
    "/v2/security/inherited/{id}": {
      "get": {
        "operationId": "HttpSecurityMatrixService.inherited_security",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          },
          {
            "in": "header",
            "name": "x_trace_id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        },
        "security": [
          {
            "http_basic": []
          },
          {
            "api_key-query-org_key": []
          }
        ]
      }
    },
    "/v2/security/oauth-search": {
      "post": {
        "operationId": "HttpSecurityMatrixService.oauth_security",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "keyword": {
                    "type": "string"
                  },
                  "page": {
                    "format": "int32",
                    "minimum": 0,
                    "type": "integer"
                  }
                },
                "required": [
                  "keyword"
                ],
                "type": "object"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        },
        "security": [
          {
            "oauth2": [
              "reports:write",
              "reports:read"
            ]
          }
        ]
      }
    },
    "/v2/security/public/ping": {
      "get": {
        "operationId": "HttpSecurityMatrixService.public_ping",
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Error"
          }
        },
        "security": []
      }
    }
  }
}
