xidlc/tests/snapshots/codegen_snapshot__openapi__http_scoped_references.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_scoped_references.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      },
      "Item": {
        "properties": {
          "root": {
            "type": "string"
          }
        },
        "required": [
          "root"
        ],
        "type": "object"
      },
      "api.Token": {
        "enum": [
          "Shadow"
        ],
        "type": "string"
      },
      "models.Alias": {
        "$ref": "#/components/schemas/models.Item"
      },
      "models.Failed": {
        "properties": {
          "item": {
            "$ref": "#/components/schemas/models.Item"
          }
        },
        "required": [
          "item"
        ],
        "type": "object"
      },
      "models.Item": {
        "properties": {
          "local": {
            "type": "string"
          }
        },
        "required": [
          "local"
        ],
        "type": "object"
      },
      "models.Token": {
        "enum": [
          "First",
          "Second"
        ],
        "type": "string"
      },
      "models.nested.Choice": {
        "oneOf": [
          {
            "properties": {
              "local": {
                "$ref": "#/components/schemas/models.Item"
              }
            },
            "required": [
              "local"
            ],
            "type": "object"
          },
          {
            "properties": {
              "root": {
                "$ref": "#/components/schemas/Item"
              }
            },
            "required": [
              "root"
            ],
            "type": "object"
          }
        ]
      },
      "models.nested.Envelope": {
        "properties": {
          "alias": {
            "$ref": "#/components/schemas/models.Alias"
          },
          "by_name": {
            "additionalProperties": {
              "$ref": "#/components/schemas/models.Item"
            },
            "type": "object"
          },
          "items": {
            "items": {
              "$ref": "#/components/schemas/models.Item"
            },
            "type": "array"
          },
          "later": {
            "$ref": "#/components/schemas/models.nested.Later"
          },
          "root": {
            "$ref": "#/components/schemas/Item"
          }
        },
        "required": [
          "items",
          "by_name",
          "root",
          "alias",
          "later"
        ],
        "type": "object"
      },
      "models.nested.Later": {
        "properties": {
          "note": {
            "type": "string"
          }
        },
        "required": [
          "note"
        ],
        "type": "object"
      }
    }
  },
  "info": {
    "title": "xidl",
    "version": "0.1.0"
  },
  "openapi": "3.2.0",
  "paths": {
    "/scoped": {
      "get": {
        "operationId": "api.Reader.read",
        "parameters": [
          {
            "in": "query",
            "name": "token",
            "required": true,
            "schema": {
              "$ref": "#/components/schemas/models.Token"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/models.nested.Envelope"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "409": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/models.Failed"
                }
              }
            },
            "description": "Error: Failed",
            "headers": {
              "X-Token": {
                "schema": {
                  "$ref": "#/components/schemas/models.Token"
                }
              }
            }
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "Reader"
        ]
      },
      "post": {
        "operationId": "models.nested.Writer.exchange",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "$ref": "#/components/schemas/models.nested.Envelope"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/models.nested.Envelope"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "Writer"
        ]
      }
    },
    "/watch": {
      "get": {
        "operationId": "api.Reader.watch",
        "responses": {
          "200": {
            "content": {
              "text/event-stream": {
                "itemSchema": {
                  "$ref": "#/components/schemas/models.Item"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "Reader"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "Reader"
    },
    {
      "name": "Writer"
    }
  ]
}
