xidlc/tests/snapshots/codegen_snapshot__openapi__http_security.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_security.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      }
    },
    "securitySchemes": {
      "api_key-header-x-api-key": {
        "in": "header",
        "name": "X-API-Key",
        "type": "apiKey"
      },
      "http_basic": {
        "scheme": "basic",
        "type": "http"
      }
    }
  },
  "info": {
    "title": "xidlc",
    "version": "v1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/health": {
      "post": {
        "deprecated": true,
        "description": "Deprecated. Since 2026-03-13T00:00:00Z. After 2026-03-14T23:59:59Z.",
        "operationId": "HttpSecurityService.health",
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "HttpSecurityService"
        ]
      }
    },
    "/users/search": {
      "post": {
        "operationId": "HttpSecurityService.search_user",
        "requestBody": {
          "content": {
            "application/json": {
              "schema": {
                "properties": {
                  "keyword": {
                    "type": "string"
                  },
                  "page": {
                    "format": "int32",
                    "minimum": 0,
                    "type": "integer"
                  }
                },
                "required": [
                  "keyword"
                ],
                "type": "object"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "tags": [
          "HttpSecurityService"
        ]
      }
    },
    "/users/{id}": {
      "get": {
        "deprecated": true,
        "description": "Deprecated. Since 2026-03-13T00:00:00Z.",
        "operationId": "HttpSecurityService.get_user",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "format": "int32",
              "minimum": 0,
              "type": "integer"
            }
          },
          {
            "in": "query",
            "name": "locale",
            "required": false,
            "schema": {
              "type": "string"
            }
          },
          {
            "in": "header",
            "name": "X-Trace-Id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "401": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Unauthorized"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [
          {
            "http_basic": []
          },
          {
            "api_key-header-x-api-key": []
          }
        ],
        "tags": [
          "HttpSecurityService"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "HttpSecurityService"
    }
  ]
}
