xidlc/tests/snapshots/codegen_snapshot__openapi__http_security_inheritance.snap
---
source: xidlc/tests/codegen_snapshot.rs
expression: output
---
===============
openapi_http_security_inheritance.json
===============
{
  "components": {
    "schemas": {
      "Error": {
        "properties": {
          "code": {
            "type": "integer"
          },
          "details": {
            "type": "object"
          },
          "msg": {
            "type": "string"
          }
        },
        "required": [
          "code",
          "msg"
        ],
        "type": "object"
      }
    },
    "securitySchemes": {
      "api_key-header-x-org-key": {
        "in": "header",
        "name": "X-Org-Key",
        "type": "apiKey"
      },
      "http_basic": {
        "scheme": "basic",
        "type": "http"
      }
    }
  },
  "info": {
    "title": "xidlc",
    "version": "v1.0.0"
  },
  "openapi": "3.1.0",
  "paths": {
    "/health": {
      "get": {
        "operationId": "HttpSecurityInheritanceService.health",
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [],
        "tags": [
          "HttpSecurityInheritanceService"
        ]
      }
    },
    "/reports/{id}": {
      "get": {
        "operationId": "HttpSecurityInheritanceService.get_report",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "401": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Unauthorized"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [
          {
            "http_basic": []
          },
          {
            "api_key-header-x-org-key": []
          }
        ],
        "tags": [
          "HttpSecurityInheritanceService"
        ]
      },
      "post": {
        "operationId": "HttpSecurityInheritanceService.update_report",
        "parameters": [
          {
            "in": "path",
            "name": "id",
            "required": true,
            "schema": {
              "type": "string"
            }
          }
        ],
        "requestBody": {
          "content": {
            "text/plain": {
              "schema": {
                "type": "string"
              }
            }
          }
        },
        "responses": {
          "200": {
            "content": {
              "text/plain": {
                "schema": {
                  "type": "string"
                }
              }
            },
            "description": "OK"
          },
          "400": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Bad Request"
          },
          "401": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Unauthorized"
          },
          "500": {
            "content": {
              "application/json": {
                "schema": {
                  "$ref": "#/components/schemas/Error"
                }
              }
            },
            "description": "Internal Server Error"
          }
        },
        "security": [
          {
            "http_basic": []
          },
          {
            "api_key-header-x-org-key": []
          }
        ],
        "tags": [
          "HttpSecurityInheritanceService"
        ]
      }
    }
  },
  "tags": [
    {
      "name": "HttpSecurityInheritanceService"
    }
  ]
}
